# contextor

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
config/: settings.yaml
models/: .gitkeep
scripts/: install.sh  trigger_context.sh  update.sh
src/: __init__.py  config.py  main.py
src/audio/: __init__.py  capture.py  transcriber.py  vad.py
src/context/: __init__.py  aggregator.py  generator.py  storage.py
src/vision/: __init__.py  camera.py  detector.py  motion.py
src/web/: __init__.py  api.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
tests/: __init__.py  conftest.py  test_audio_capture.py  test_audio_transcriber.py  test_audio_vad.py  test_config.py  test_context_aggregator.py  test_context_generator.py  test_context_storage.py  test_main.py  test_vision_camera.py  test_vision_detector.py  test_vision_motion.py  test_web_api.py
